<resources>
    <string name="app_name">Calculator</string>
    <string name="expression">0</string>
    <string name="buttonReset">AC</string>
    <string name="buttonBackspace">⌫</string>
    <string name="buttonPercent">%</string>
    <string name="buttonDividing">÷</string>
    <string name="buttonMultiplication">×</string>
    <string name="buttonMinus">-</string>
    <string name="buttonPlus">+</string>
    <string name="buttonDot">.</string>
    <string name="buttonResult">=</string>
    <string name="buttonNumber0">0</string>
    <string name="buttonNumber1">1</string>
    <string name="buttonNumber2">2</string>
    <string name="buttonNumber3">3</string>
    <string name="buttonNumber4">4</string>
    <string name="buttonNumber5">5</string>
    <string name="buttonNumber6">6</string>
    <string name="buttonNumber7">7</string>
    <string name="buttonNumber8">8</string>
    <string name="buttonNumber9">9</string>
</resources>