<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:clickable="false"
        android:gravity="bottom|right"
        android:text="@string/expression"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:columnCount="4"
        android:rowCount="5"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expression"
        app:layout_constraintVertical_bias="0.0"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonReset"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonReset" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBackspace"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonBackspace" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPercent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonPercent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDividing"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonDividing" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNumber7"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonNumber7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNumber8"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonNumber8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNumber9"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonNumber9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMultiplication"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonMultiplication" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNumber4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonNumber4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNumber5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonNumber5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNumber6"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonNumber6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMinus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonMinus" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNumber1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonNumber1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNumber2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonNumber2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNumber3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonNumber3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPlus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonPlus" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNumber0"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonNumber0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDot"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonDot" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonResult"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/dustyWhite"
            android:text="@string/buttonResult" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>